# internal/users/user_request.go
@@ -1,1 +1,6 @@
 package users
+
+type UserRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,password"`
+}
